Mon Aug 10 14:12:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/ComponentServer/CIAO_Container_Impl.cpp:
          Fixed layout of debug message

Mon Aug 10 12:59:21 UTC 2009  William R. Otte  <Wotte@dre.vanderbilt.edu>

        * DAnCE/Logger/File_Logger_Backend.h:
        * DAnCE/Logger/Logger_Service.cpp:

          Unicoe fixes.

Mon Aug 10 10:53:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tests/CIAO/Components/SimpleNilFacetProvider.idl
        * DAnCE/tests/CIAO/Components/SimpleNilFacetProvider.mpc
        * DAnCE/tests/CIAO/Components/SimpleNilFacetProvider_exec.cpp
        * DAnCE/tests/CIAO/Components/SimpleNilFacetProvider_exec.h
        * DAnCE/tests/CIAO/Components/SimpleNilFacetUser.idl
        * DAnCE/tests/CIAO/Components/SimpleNilFacetUser.mpc
        * DAnCE/tests/CIAO/Components/SimpleNilFacetUser_exec.cpp
        * DAnCE/tests/CIAO/Components/SimpleNilFacetUser_exec.h
        * DAnCE/tests/CIAO/ExecutionManager-Deployments/SimplexConnectionExplicitHome_NilFacet.cdp
          Added a new test for the case where the component that
          provides return a nil object reference. The caller should
          then get an INV_OBJREF exception, not a crash.

          The CCM spec says in 6.4.2:
          In general, a component instance shall be prepared to return object
          references for facets throughout the instance's life
          cycle. A component implementation may, as part of its advertised
          behavior, return a nil object reference as the result of
          a provide_<name> operation

        * DAnCE/tests/CIAO/Components/SimpleMultipleUser_exec.cpp
          Catch as const

        * DAnCE/tests/DeploymentPlanDump/test.cpp:
          Layout change

        * DAnCE/tests/DeploymentPlanTestReferences/test.cpp:
          Type, unicode changes

        * DAnCE/tests/NameServiceTest/clt_main.cpp:
          Unicode fix
