@@ -176,7 +176,7 @@ if (PerlACE::waitforfile_timed ("SenderOne.ior",
     exit 1;
 }
 
-print "Sleeping 60 seconds to allow task to complete";
+print "Sleeping 60 seconds to allow task to complete\n";
 sleep (60);
 
 # print "Invoking the controller ($controller_exec -k file://Sender.ior)\n";
