@@ -1,3 +1,11 @@
+Mon Aug 10 14:23:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * dds4ccm/examples/Hello/descriptors/run_1_to_5.pl
+        * dds4ccm/examples/Hello/descriptors/run_5_to_1.pl
+        * dds4ccm/examples/Hello/descriptors/run_5_to_5.pl
+        * dds4ccm/examples/Hello/descriptors/run_test.pl
+          Added missing \n
+
 Mon Aug 10 14:12:39 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ciao/ComponentServer/CIAO_Container_Impl.cpp:
